# LayerMatNode

./: .gitignore  CMakeLists.txt  README.md  test.mel  test_normal.mel
plugin/: LayerMatNode.mtd  LayerMatNode.mtd2  LayerMatNode.py  la_DielectricBSDFTemplate.py  la_LambertBSDFTemplate.py  la_LayeredBSDFTemplate.py  la_MetalBSDFTemplate.py  simpleShader.mtd  simpleShader.py  simple_scene.ass
src/: bsdf.h  bsdfs.cpp  bsdfs.h  common.h  dielectric_bsdf.cpp  dielectric_bsdf.h  dielectric_node.cpp  lambert_bsdf.cpp  lambert_node.cpp  layerbsdf.cpp  layerbsdf.h  layered_bsdf.cpp  layered_node.cpp  loader.cpp  metal_bsdf.cpp  metal_node.cpp  microfacet.cpp  microfacet.h  random.h  simple_shader.cpp
